traces/bug_701.txt
examples++-load/isoline.cpp:1074: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/isoline.cpp:1074:1: initialization of callDoLoadInit
1072.   }
1073.   
1074. > LOADFUNC(finit);  //  une variable globale qui serat construite  au chargement dynamique    

examples++-load/isoline.cpp:1074:1: call to DoLoadInit
1072.   }
1073.   
1074. > LOADFUNC(finit);  //  une variable globale qui serat construite  au chargement dynamique    

examples++-load/isoline.cpp:1074:1: call to addInitFunct
  1072.   }
  1073.   
  1074. > LOADFUNC(finit);  //  une variable globale qui serat construite  au chargement dynamique    

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
